--- a/style.css
+++ b/style.css
@@ -33,7 +33,6 @@
 .header section ul {
     list-style-type: none;
 }
-
 .header section ul li {
     flex: 1;
     display: inline-block;
@@ -41,13 +40,11 @@
     background-color: var(--main-bg-color);
     justify-content: flex-end;
 }
-
 .header a:link, a:visited {
     color: var(--contrast-text);
     text-align: center;
     text-decoration: none;
 }
-
 .header a:hover, a:active {
     background-color: var(--contrast-text);
     color: var(--main-bg-color);
@@ -55,7 +52,14 @@
     text-decoration: underline;
 }
 
+/* Style for image after nav bar */
+
+.background-pic {
+    max-width: 100%;
+}
+
 /* Styles for About me section */
+
 #about-me {
     display: flex;
     flex-direction: row-reverse;
@@ -63,7 +67,6 @@
     border: 1rem dashed var(--main-bg-color);
     border-top: 1rem solid var(--main-bg-color);
 }
-
 /* Style for image */
 #about-me img{
     flex: 1;
@@ -84,7 +87,6 @@ article h2 {
     display: block;
     text-align: center;
 }
-
 /* Style for text */
 #about-me p {
     font-size: 1.5rem;
@@ -107,6 +109,7 @@ article h2 {
     border-left: 1rem dashed var(--main-bg-color);
     border-right: 1rem dashed var(--main-bg-color);
     background-color: var(--contrast-text);
+    border-bottom: 1rem dashed var(--main-bg-color);
 }
 .tooltip:hover .popup1 {
     display: unset;
