Added 3 placeholder images and links to represent future projects

--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ article h2 {
 /* Style for Large Image in Project section */
 .feature {
     max-width: 75%;
-    min-height: fit-content;
+    min-height: 240px;
     flex: 1;
 }
 /* Style for pop up */
@@ -109,7 +109,6 @@ article h2 {
     border-left: 1rem dashed var(--main-bg-color);
     border-right: 1rem dashed var(--main-bg-color);
     background-color: var(--contrast-text);
-    border-bottom: 1rem dashed var(--main-bg-color);
 }
 .tooltip:hover .popup1 {
     display: unset;
@@ -133,4 +132,8 @@ article h2 {
     background-color: var(--main-bg-color);
     opacity: 80%;
     z-index: 1;
+}
+/* Project section */
+.projects {
+    
 }
