--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ article h2 {
 
 /* Style for Large Image in Project section */
 .feature {
-    max-width: 75%;
+    max-width: 90%;
     min-height: 240px;
     flex: 1;
 }
@@ -141,4 +141,27 @@ article h2 {
 }
 .projects img {
     max-width: 100%;
+}
+.projects a {
+    position: relative;
+}
+.projects a:hover {
+    border: 1rem dashed var(--main-bg-color);
+    background-color: var(--contrast-text);
+}
+.projects a .popup2 {
+    display: none;
+    font-size: 2rem;
+    border-radius: 6px;
+    padding: 3px 5px 3px 5px;
+    position: absolute;
+    top: 8%;
+    left: 3%;
+    color: var(--contrast-text);
+    background-color: var(--main-bg-color);
+    opacity: 80%;
+    z-index: 1;
+}
+.projects a:hover .popup2 {
+    display: unset;
 }
